--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,7 +12,7 @@ jobs:
       VERSION: ${{ github.ref_name }}
     strategy:
       matrix:
-        go: [ '17' ]
+        go: [ '1.18' ]
     services:
       manticoresearch-manticore:
         image: manticoresearch/manticore:dev
@@ -29,5 +29,5 @@ jobs:
     - name: Publish
       run: |
         go mod tidy
-        GOPROXY=proxy.golang.org go list -m github.com/manticoresoftware/manticoresearch-go@$VERSION
+        echo github.com/manticoresoftware/manticoresearch-go@$VERSION
 
