Updated Action workflows and Readme for dev version

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,23 +1,20 @@
 name: Publishing
 
-on:
-  push:
-    branches-ignore: [ master ]
+on: [push]
 
 jobs:
+  test:
+    uses: ./.github/workflows/test.yml
   publish:
     name: Publish the client to the public registry
+    needs: [test]
     runs-on: ubuntu-22.04
     env:
       VERSION: ${{ github.ref_name }}
     strategy:
       matrix:
         go: [ '17' ]
-    services:
-      manticoresearch-manticore:
-        image: manticoresearch/manticore:dev
-        ports:
-          - 9408:9308
+
     steps:
     - uses: actions/checkout@v2
     - name: Setup Go ${{ matrix.go-version }}
