--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,6 @@
 name: tests
 
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+on: [workflow_call]
 
 jobs:
   test:
@@ -19,6 +15,8 @@ jobs:
     services:
       manticoresearch-manticore:
         image: manticoresearch/manticore:dev
+        env:
+          EXTRA: 1
         ports:
           - 9408:9308
 
